# cmdbase

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Modules/: CheckFunctionExists.cmake
cmake/: flags.cmake  globals.cmake  options.cmake  utilities.cmake
libraries/: CMakeLists.txt
libraries/cmake/source/gflags/: CMakeLists.txt
libraries/cmake/source/modules/: utils.cmake
math/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
